<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="loginViewModel"
            type="fr.nuroz.quickdiner.fragments.LoginViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/mid_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <TextView
                android:id="@+id/login_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/login"
                style="@style/Theme.QuickDiner.title" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_login_textLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_text"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"
                android:hint="@string/email_hint"
                app:startIconDrawable="@drawable/ic_email"
                style="@style/Theme.QuickDiner.textFieldLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_login_textField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:text="@={loginViewModel.email}"
                    style="@style/Theme.QuickDiner.textField"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_login_textLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email_login_textLayout"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="20dp"
                android:hint="@string/password_hint"
                app:startIconDrawable="@drawable/ic_password"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true"
                style="@style/Theme.QuickDiner.textFieldLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_login_textField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:text="@={loginViewModel.password}"
                    style="@style/Theme.QuickDiner.textField" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/password_login_textLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp"
                android:text="@string/login_button"
                 style="@style/Theme.QuickDiner.boutton"/>

            <TextView
                android:id="@+id/register_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/login_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/register"
                android:layout_marginTop="40dp"
                style="@style/Theme.QuickDiner.title" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/last_name_register_textLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@+id/mid_guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/register_text"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/last_name_hint"
                app:errorEnabled="true"
                style="@style/Theme.QuickDiner.textFieldLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/last_name_register_textField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Theme.QuickDiner.textField" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/first_name_register_textLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/mid_guideline"
                app:layout_constraintTop_toBottomOf="@id/register_text"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/first_name_hint"
                app:errorEnabled="true"
                style="@style/Theme.QuickDiner.textFieldLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/first_name_register_textField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Theme.QuickDiner.textField" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_register_textLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/last_name_register_textLayout"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="20dp"
                android:hint="@string/email_hint"
                app:startIconDrawable="@drawable/ic_email"
                app:errorEnabled="true"
                style="@style/Theme.QuickDiner.textFieldLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_register_textField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:text="@={loginViewModel.emailRegister}"
                    style="@style/Theme.QuickDiner.textField"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/type_de_compte_register_textLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/account_type_hint"
                app:layout_constraintTop_toBottomOf="@id/email_register_textLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="20dp"
                app:errorEnabled="true"
                style="@style/Theme.QuickDiner.dropDown">

                <AutoCompleteTextView
                    android:id="@+id/type_de_compte_register_autoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    tools:ignore="LabelFor"
                    style="@style/Theme.QuickDiner.dropDownComponent"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_register_textLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                app:layout_constraintTop_toBottomOf="@id/type_de_compte_register_textLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="20dp"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/ic_password"
                app:errorEnabled="true"
                style="@style/Theme.QuickDiner.textFieldLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_register_textField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    style="@style/Theme.QuickDiner.textField"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirm_password_register_textLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password_hint"
                app:layout_constraintTop_toBottomOf="@id/password_register_textLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="20dp"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/ic_password"
                app:errorEnabled="true"
                style="@style/Theme.QuickDiner.textFieldLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirm_password_register_textField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    style="@style/Theme.QuickDiner.textField"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/info_restau_register_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                app:layout_constraintTop_toBottomOf="@id/confirm_password_register_textLayout"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/info_resteau"
                style="@style/Theme.QuickDiner.subTitle"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/resteau_name_register_textLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/restaurant_name_hint"
                app:layout_constraintTop_toBottomOf="@id/info_restau_register_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"
                app:errorEnabled="true"
                style="@style/Theme.QuickDiner.textFieldLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/resteau_name_register_textField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Theme.QuickDiner.textField"/>

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/register_image"
                android:layout_width="175dp"
                android:layout_height="175dp"
                android:src="@drawable/ic_image"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toBottomOf="@+id/resteau_name_register_textLayout"
                app:layout_constraintStart_toStartOf="parent"
                android:contentDescription="@string/image_restaurant_description" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/resteau_adresse_register_textLayout"
                style="@style/Theme.QuickDiner.textFieldLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/restaurant_adresse_hint"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/register_image"
                app:layout_constraintTop_toTopOf="@id/register_image">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/resteau_adresse_register_textField"
                    style="@style/Theme.QuickDiner.textField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/resteau_ville_register_textLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/restaurant_ville_hint"
                app:layout_constraintBottom_toBottomOf="@id/register_image"
                app:layout_constraintStart_toEndOf="@id/register_image"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                app:errorEnabled="true"
                style="@style/Theme.QuickDiner.textFieldLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/resteau_ville_register_textField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Theme.QuickDiner.textField"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/register_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginVertical="20dp"
                android:text="@string/register_button"
                style="@style/Theme.QuickDiner.boutton"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>